added working waybar for both modes, with color changes and scripts

--- a/.config/hypr/conf/global_conf.conf
+++ b/.config/hypr/conf/global_conf.conf
@@ -3,6 +3,7 @@ monitor = Virtual-1, 1920x1080@60, 0x0, 1
 $terminal = foot
 exec-once = swww-daemon
 exec-once = swww img wallpapers/gradient-pb.png --transition-type center
+exec-once = waybar -c ~/.config/waybar/config.jsonc -s ~/.config/waybar/style.css
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
