--- a/.config/hypr/conf/work_mode.conf
+++ b/.config/hypr/conf/work_mode.conf
@@ -1,5 +1,6 @@
 # Cava bottom bar
 windowrulev2 = float, class:^(foot)$, title:^(cava)$
+windowrulev2 = pin, class:^(foot)$, title:^(cava)$
 windowrulev2 = move 20% 100%-130, class:^(foot)$, title:^(cava)$
 windowrulev2 = size 60% 110, class:^(foot)$, title:^(cava)$
 windowrulev2 = noblur on, class:^(foot)$, title:^(cava)$
@@ -20,7 +21,7 @@ general {
 	gaps_out = 20
 	gaps_workspaces = 100
 	col.inactive_border = rgba(ffffff40)
-	col.active_border = rgba(85bdddff) rgba(eb787fff) 45deg
+	col.active_border = rgba(ffffffa0) rgba(85bdddff) 45deg
 	col.nogroup_border = 0xffffffff
 	col.nogroup_border_active = 0xffffffff
 	layout = dwindle
@@ -81,4 +82,4 @@ decoration {
 }
 
 bind = $mainMod, M, exec, ~/.config/hypr/scripts/switch_to_zen_mode.sh
-bind = $mainMod, M, exec, ~/.config/hypr/scripts/cava_bar.sh
+bind = $mainMod, M, exec, sleep 0.1 && ~/.config/hypr/scripts/cava_bar.sh
