--- a/.config/hypr/conf/zen_mode.conf
+++ b/.config/hypr/conf/zen_mode.conf
@@ -1,5 +1,6 @@
 # Cava bottom bar
 windowrulev2 = float, class:^(foot)$, title:^(cava)$
+windowrulev2 = pin, class:^(foot)$, title:^(cava)$
 windowrulev2 = move 20% 100%-130, class:^(foot)$, title:^(cava)$
 windowrulev2 = size 60% 110, class:^(foot)$, title:^(cava)$
 windowrulev2 = noblur on, class:^(foot)$, title:^(cava)$
@@ -17,10 +18,10 @@ general {
 	border_size = 6
 	no_border_on_floating = false
 	gaps_in = 15
-	gaps_out = 150, 200, 150, 200
+	gaps_out = 100, 200, 150, 200
 	gaps_workspaces = 100
 	col.inactive_border = rgba(ffffff00)
-	col.active_border = rgba(85bdddff) rgba(eb787fff) 45deg
+	col.active_border = rgba(ffffffa0) rgba(d56586eb) 45deg
 	col.nogroup_border = 0xffffffff
 	col.nogroup_border_active = 0xffffffff
 	layout = dwindle
