added window minimization mechanic with custom workspace

--- a/.config/hypr/conf/global_conf.conf
+++ b/.config/hypr/conf/global_conf.conf
@@ -1,3 +1,15 @@
+# Cava bottom bar
+windowrulev2 = float, class:^(foot)$, title:^(cava)$
+windowrulev2 = pin, class:^(foot)$, title:^(cava)$
+windowrulev2 = move 20% 100%-130, class:^(foot)$, title:^(cava)$
+windowrulev2 = size 60% 110, class:^(foot)$, title:^(cava)$
+windowrulev2 = noblur, class:^(foot)$, title:^(cava)$
+windowrulev2 = noshadow, class:^(foot)$, title:^(cava)$
+windowrulev2 = noborder, class:^(foot)$, title:^(cava)$
+windowrulev2 = opaque, class:^(foot)$, title:^(cava)$
+windowrulev2 = noinitialfocus, class:^(foot)$, title:^(cava)$
+windowrulev2 = suppressevent activate activatefocus, class:^(foot)$, title:^(cava)$
+
 monitor = Virtual-1, 1920x1080@60, 0x0, 1
 
 $terminal = foot
@@ -299,9 +311,13 @@ bind = $mainMod SHIFT, code:17, movetoworkspace, 8
 bind = $mainMod SHIFT, code:18, movetoworkspace, 9
 bind = $mainMod SHIFT, code:19, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-	  bind = $mainMod, S, togglespecialworkspace, magic
-	  bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# Minimized windows workspace ($mainMod + S to toggle and $mainMod + D to move windows in and out)
+workspace = special:minimized, gapsin:65, gapsout:150 250 200 250, bordersize:8
+animation = specialWorkspace, 1, 3, default, slidefadevert
+bind = $mainMod, Tab, togglespecialworkspace, minimized
+bind = $mainMod SHIFT, Tab, movetoworkspacesilent, special:minimized
+bind = $mainMod SHIFT, Tab, movetoworkspace, +0
+
 
 # Scroll through existing workspaces with mainMod + scroll
 	  bind = $mainMod, mouse_down, workspace, e+1
