--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,3 +1,11 @@
-source = ~/.config/hypr/conf/global_conf.conf
-
-source = ~/.config/hypr/conf/active_mode.conf
+source = ~/.config/hypr/conf/monitors.conf
+source = ~/.config/hypr/conf/exec.conf
+source = ~/.config/hypr/conf/environment.conf
+source = ~/.config/hypr/conf/appearance.conf
+source = ~/.config/hypr/conf/animations.conf
+source = ~/.config/hypr/conf/input.conf
+source = ~/.config/hypr/conf/groups.conf
+source = ~/.config/hypr/conf/misc.conf
+source = ~/.config/hypr/conf/layouts.conf
+source = ~/.config/hypr/conf/bindings.conf
+source = ~/.config/hypr/conf/rules.conf
