updated README.md dependencies

--- a/.config/hypr/conf/exec.conf
+++ b/.config/hypr/conf/exec.conf
@@ -1,7 +1,7 @@
 exec-once = udiskie
 exec-once = hypridle
 exec-once = swww-daemon
-exec-once = swww img ~/Pictures/wallpapers/papercut-blue-dark.png --transition-type center
+exec-once = swww img ~/Pictures/wallpapers/papercut-blue-dark.png --transition-type center #put the path to your wallpaper here
 exec-once = waybar -c ~/.config/waybar/config.jsonc -s ~/.config/waybar/style.css
 exec-once = exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprpolkitagent
