added window rules to youtube music player

--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -2,3 +2,5 @@ layerrule = animation fade, selection
 layerrule = animation fade, hyprpicker
 layerrule = animation fade, logout_dialog
 windowrulev2 = tile, class:^(Minecraft)
+windowrulev2 = pseudo, class:com.github.th_ch.youtube_music
+windowrulev2 = size 500 800, class:com.github.th_ch.youtube_music
