added menu dashboard, going to be modified

--- a/.config/hypr/conf/bindings.conf
+++ b/.config/hypr/conf/bindings.conf
@@ -5,6 +5,7 @@ $browser = zen-browser
 $filemanager = nautilus
 $menu = ~/.config/hypr/scripts/supermenu.sh
 
+bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $filemanager
