--- a/.config/hypr/conf/rules.conf
+++ b/.config/hypr/conf/rules.conf
@@ -4,7 +4,13 @@ layerrule = animation fade, logout_dialog
 windowrulev2 = tile, class:^(Minecraft)
 windowrulev2 = pseudo, class:com.github.th_ch.youtube_music
 windowrulev2 = size 500 800, class:com.github.th_ch.youtube_music
+
 windowrulev2 = float, class:foot, title:nmtui
 windowrulev2 = center, class:foot, title:nmtui
 windowrulev2 = pin, class:foot, title:nmtui
 windowrulev2 = size 800 500, class:foot, title:nmtui
+
+windowrulev2 = float, class:foot, title:screensaver
+windowrulev2 = size 1000 900, class:foot, title:screensaver
+windowrulev2 = fullscreen, class:foot, title:screensaver
+windowrulev2 = animation popin 100%, class:foot, title:screensaver
