corrected binding bug and updated notification design

--- a/.config/hypr/conf/bindings.conf
+++ b/.config/hypr/conf/bindings.conf
@@ -3,13 +3,13 @@ $mainMod = SUPER
 $terminal = foot
 $browser = zen-browser
 $filemanager = nautilus
-$menu = ~/.config/hypr/scripts/supermenu.sh
+$appmenu = wofi --show drun
 
 bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $filemanager
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, R, exec, $appmenu
 bind = $mainMod, D, exec, vesktop
 bind = $mainMod, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, Q, killactive,
