--- a/.config/mako/config
+++ b/.config/mako/config
@@ -8,10 +8,10 @@ sort=-time
 output=DP-2
 layer=overlay
 anchor=top-right
-background-color=#202730
+background-color=#1a1a1a
 width=300
 height=110
-margin=10
+margin= 18,20,0,0
 padding=0,5,40
 border-size=3
 border-color=#f5f5f5
