--- a/.config/hypr/conf/bindings.conf
+++ b/.config/hypr/conf/bindings.conf
@@ -5,7 +5,7 @@ $browser = zen-browser
 $filemanager = nautilus
 $appmenu = wofi --show drun
 
-bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
+# bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $filemanager
@@ -23,7 +23,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, K, swapsplit, # dwindle
 bind = $mainMod SHIFT, Q, exec, wlogout
-bind = , print, exec, grim -g "$(slurp -w 0)" - | wl-copy
+bind = $mainMod, L, exec, hyprlock
+bind = , print, exec, grim -g "$(slurp  -w 0 -b 000000aa)" - | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
