--- a/.config/hypr/conf/exec.conf
+++ b/.config/hypr/conf/exec.conf
@@ -7,3 +7,5 @@ exec-once = exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPL
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = eww daemon
+exec-once = ~/.config/hypr/scripts/battery_notifier.sh
