--- a/beige_mono/.config/hypr/hyprlock.conf
+++ b/beige_mono/.config/hypr/hyprlock.conf
@@ -5,7 +5,7 @@ general {
 
 background {
 	monitor =
-	path = ~/Pictures/wallpapers/papercut-blue-dark.png
+	path = ~/Pictures/wallpapers/wave_wallpaper.jpg
 	color = rgba(255, 0, 0, 1.0)
 	blur_passes = 0
 }
@@ -31,13 +31,18 @@ input-field {
 	fail_timeout = 1000
 	fail_transition = 200
 	outline_thickness = 3
+  rounding = 10
 	outer_color = rgba(0,0,0,0)
-	inner_color = rgba(26, 26, 26, 1)
-	font_color = rgba(245, 245, 245, 0.8)
+	inner_color = #dcd3ca
+	font_color = #1a1a1a
 	check_color = rgba(46b313ff)
 	fail_color = rgba(255,0,0,1)
 	capslock_color = rgba(ff0000ff)
 	fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+  shadow_passes = 2
+  shadow_size = 2
+  shadow_color = #808080
+  shadow_boost = 1
 }
 
 label {
