added todo list keybinds

--- a/beige_mono/.config/hypr/conf/bindings.conf
+++ b/beige_mono/.config/hypr/conf/bindings.conf
@@ -4,6 +4,7 @@ $terminal = foot
 $browser = zen-browser
 $filemanager = nautilus
 $appmenu = wofi --show drun
+$todo = foot -T todo -e c3
 
 # bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
 bind = $mainMod, Return, exec, $terminal
@@ -24,6 +25,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, K, swapsplit, # dwindle
 bind = $mainMod SHIFT, Q, exec, wlogout
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, X, exec, $todo
 bind = , print, exec, grim -g "$(slurp  -w 0 -b 000000aa)" - | wl-copy
 
 # Move focus with mainMod + arrow keys
