--- a/beige_mono/.config/hypr/conf/rules.conf
+++ b/beige_mono/.config/hypr/conf/rules.conf
@@ -5,6 +5,9 @@ layerrule = animation slide, wofi
 windowrulev2 = tile, class:^(Minecraft)
 windowrulev2 = pseudo, class:com.github.th_ch.youtube_music
 windowrulev2 = size 500 800, class:com.github.th_ch.youtube_music
+windowrulev2 = float, title:todo
+windowrulev2 = size 600 800, title:todo
+windowrulev2 = move 660 65, title:todo
 
 windowrulev2 = float, class:foot, title:nmtui
 windowrulev2 = center, class:foot, title:nmtui
