modified style of hyprlock

--- a/beige_mono/.config/hypr/conf/bindings.conf
+++ b/beige_mono/.config/hypr/conf/bindings.conf
@@ -5,6 +5,7 @@ $browser = zen-browser
 $filemanager = nautilus
 $appmenu = wofi --show drun
 $todo = foot -T todo -e c3
+$screenshot = grim -g "$(slurp  -w 0 -b 00000066)" - | wl-copy
 
 # bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
 bind = $mainMod, Return, exec, $terminal
@@ -26,7 +27,7 @@ bind = $mainMod, K, swapsplit, # dwindle
 bind = $mainMod SHIFT, Q, exec, wlogout
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, X, exec, $todo
-bind = , print, exec, grim -g "$(slurp  -w 0 -b 000000aa)" - | wl-copy
+bind = , print, exec, $screenshot
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
