--- a/beige_mono/.config/hypr/hyprlock.conf
+++ b/beige_mono/.config/hypr/hyprlock.conf
@@ -10,13 +10,37 @@ background {
 	blur_passes = 0
 }
 
+shape {
+  monitor =
+  size = 200, 240
+  color = rgba(220, 211, 202, 1.0)
+  rounding = 10
+	position = 0, 50
+	halign = center
+	valign = center
+  shadow_passes = 2
+  shadow_size = 2
+  shadow_color = #808080
+  shadow_boost = 1
+}
+
 image {
 	monitor =
 	path = ~/.config/hypr/user-image.png
 	size = 200
 	rounding = -1
 	border_size = 0
-	position = 0, 100
+	position = 0, 70
+	halign = center
+	valign = center
+}
+
+label {
+	monitor =
+	text = $USER
+	color = rgba(0, 0, 0, 1.0)
+	font-size = 25
+	position = 0, -30
 	halign = center
 	valign = center
 }
@@ -25,7 +49,7 @@ input-field {
 	monitor =
 	size = 20%, 5%
 	fade_on_empty = false
-	position = 0, -100
+	position = 0, -130
 	halign = center
 	valign = center
 	fail_timeout = 1000
@@ -33,7 +57,7 @@ input-field {
 	outline_thickness = 3
   rounding = 10
 	outer_color = rgba(0,0,0,0)
-	inner_color = #dcd3ca
+	inner_color = rgba(220, 211, 202, 1.0)
 	font_color = #1a1a1a
 	check_color = rgba(46b313ff)
 	fail_color = rgba(255,0,0,1)
@@ -43,14 +67,4 @@ input-field {
   shadow_size = 2
   shadow_color = #808080
   shadow_boost = 1
-}
-
-label {
-	monitor =
-	text = $USER
-	color = rgba(255, 255, 255, 1.0)
-	font-size = 25
-	position = 0, 0
-	halign = center
-	valign = center
 }
