--- a/beige_mono/.config/mako/config
+++ b/beige_mono/.config/mako/config
@@ -8,26 +8,29 @@ sort=-time
 output=DP-2
 layer=overlay
 anchor=top-right
-background-color=#1a1a1a
+background-color=#dcd3ca
+text-color=#000000
 width=300
 height=110
-margin= 18,20,0,0
-padding=0,5,40
-border-size=3
-border-color=#f5f5f5
-border-radius=20
+margin= 10,15,0,0
+padding=20
+border-size=0
+border-color=#000000
+border-radius=10
 icons=1
 max-icon-size=64
 default-timeout=10000
 ignore-timeout=1
 
 [urgency=normal]
-border-color=#f5f5f5
+background-color=#dcd3ca
+text-color=#000000
 
 [urgency=high]
-border-color=#ff0000
+background-color=#ca7081
+text-color=#ffffff
 default-timeout=0
-anchor=center
+anchor=top-center
 
 [app-name=lightcord]
 border-color=#88c0d0
