modified menus keybinds

--- a/beige_mono/.config/hypr/conf/bindings.conf
+++ b/beige_mono/.config/hypr/conf/bindings.conf
@@ -3,8 +3,8 @@ $mainMod = SUPER
 $terminal = foot
 $browser = zen-browser
 $filemanager = nautilus
-$appmenu = wofi --show drun
-$todo = foot -T todo -e c3
+$appmenu = ~/.config/wofi/toggle.sh
+$todo = ~/.config/c3/toggle.sh
 $screenshot = grim -g "$(slurp  -w 0 -b 00000066)" - | wl-copy
 
 # bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
@@ -92,7 +92,7 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 # Custom workspaces
 
 # Minimized windows workspace ($mainMod + S to toggle and $mainMod + D to move windows in and out)
-workspace = special:minimized, gapsin:60, gapsout:70, bordersize:3
+workspace = special:minimized, gapsin:60, gapsout:70, bordersize:0
 bind = $mainMod, Tab, togglespecialworkspace, minimized
 bind = $mainMod SHIFT, Tab, movetoworkspacesilent, special:minimized
 bind = $mainMod SHIFT, Tab, movetoworkspace, +0
