--- a/beige_mono/.config/hypr/conf/environment.conf
+++ b/beige_mono/.config/hypr/conf/environment.conf
@@ -2,3 +2,5 @@ env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,28
 env = HYPRCURSOR_THEME,hypr_Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,28
+
+env = RANGER_LOAD_DEFAULT_RC=false
