modified hyprlock and cursor

--- a/beige_mono/.config/hypr/conf/environment.conf
+++ b/beige_mono/.config/hypr/conf/environment.conf
@@ -1,6 +1,6 @@
-env = XCURSOR_THEME,Bibata-Modern-Ice
+env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,28
-env = HYPRCURSOR_THEME,hypr_Bibata-Modern-Ice
+env = HYPRCURSOR_THEME,hypr_Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,28
 
 env = RANGER_LOAD_DEFAULT_RC=false
