--- a/beige_mono/.config/hypr/hyprlock.conf
+++ b/beige_mono/.config/hypr/hyprlock.conf
@@ -12,10 +12,59 @@ background {
 
 shape {
   monitor =
+  size = 250, 150
+  color = rgba(220, 211, 202, 1.0)
+  rounding = 10
+	position = 0, 180
+	halign = center
+	valign = center
+  shadow_passes = 2
+  shadow_size = 2
+  shadow_color = #808080
+  shadow_boost = 1
+}
+
+label {
+	monitor =
+  text = cmd[update:60000] echo $(date +"%H:%M")
+  text_align = center
+	color = rgba(0, 0, 0, 1.0)
+	font_size = 50
+	position = 0, 180
+	halign = center
+	valign = center
+}
+
+input-field {
+	monitor =
+	size = 20%, 5%
+	fade_on_empty = false
+	position = 0, -230
+	halign = center
+	valign = center
+	fail_timeout = 1000
+	fail_transition = 200
+	outline_thickness = 3
+  rounding = 10
+	outer_color = rgba(0,0,0,0)
+	inner_color = rgba(220, 211, 202, 1.0)
+	font_color = #1a1a1a
+	check_color = rgba(46b313ff)
+	fail_color = rgba(255,0,0,1)
+	capslock_color = rgba(ff0000ff)
+	fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+  shadow_passes = 2
+  shadow_size = 2
+  shadow_color = #808080
+  shadow_boost = 1
+}
+
+shape {
+  monitor =
   size = 200, 240
   color = rgba(220, 211, 202, 1.0)
   rounding = 10
-	position = 0, 50
+	position = 0, -50
 	halign = center
 	valign = center
   shadow_passes = 2
@@ -30,7 +79,7 @@ image {
 	size = 200
 	rounding = -1
 	border_size = 0
-	position = 0, 70
+	position = 0, -30
 	halign = center
 	valign = center
 }
@@ -39,8 +88,8 @@ label {
 	monitor =
 	text = $USER
 	color = rgba(0, 0, 0, 1.0)
-	font-size = 25
-	position = 0, -30
+	font_size = 20
+	position = 0, -130
 	halign = center
 	valign = center
 }
@@ -49,7 +98,7 @@ input-field {
 	monitor =
 	size = 20%, 5%
 	fade_on_empty = false
-	position = 0, -130
+	position = 0, -230
 	halign = center
 	valign = center
 	fail_timeout = 1000
@@ -59,7 +108,7 @@ input-field {
 	outer_color = rgba(0,0,0,0)
 	inner_color = rgba(220, 211, 202, 1.0)
 	font_color = #1a1a1a
-	check_color = rgba(46b313ff)
+	check_color = rgba(ffffffff)
 	fail_color = rgba(255,0,0,1)
 	capslock_color = rgba(ff0000ff)
 	fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
