changed various things

--- a/beige_mono/.config/hypr/hyprlock.conf
+++ b/beige_mono/.config/hypr/hyprlock.conf
@@ -12,10 +12,10 @@ background {
 
 shape {
   monitor =
-  size = 250, 150
+  size = 320, 130
   color = rgba(220, 211, 202, 1.0)
   rounding = 10
-	position = 0, 180
+	position = 0, 170
 	halign = center
 	valign = center
   shadow_passes = 2
@@ -26,11 +26,11 @@ shape {
 
 label {
 	monitor =
-  text = cmd[update:60000] echo $(date +"%H:%M")
+  text = cmd[update:100] echo $(date +"%H:%M:%S")
   text_align = center
 	color = rgba(0, 0, 0, 1.0)
 	font_size = 50
-	position = 0, 180
+	position = 0, 170
 	halign = center
 	valign = center
 }
