--- a/beige_mono/.config/hypr/conf/exec.conf
+++ b/beige_mono/.config/hypr/conf/exec.conf
@@ -1,8 +1,9 @@
 exec-once = udiskie
 exec-once = hypridle
 exec-once = swww-daemon
-exec-once = swww img ~/Pictures/wallpapers/wave_wallpaper.jpg --transition-type center
-exec-once = waybar -c ~/.config/waybar/config.jsonc -s ~/.config/waybar/style.css
+exec-once = hyprsunset
+exec-once = swww img ~/Pictures/wallpapers/wave-wallpaper_light.png --transition-type center
+exec-once = waybar -c ~/.config/waybar/config.jsonc -s ~/.config/waybar/style_light.css
 exec-once = exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
