--- a/beige_mono/.config/hypr/hyprlock.conf
+++ b/beige_mono/.config/hypr/hyprlock.conf
@@ -5,7 +5,7 @@ general {
 
 background {
 	monitor =
-	path = ~/Pictures/wallpapers/wave_wallpaper.jpg
+	path = ~/Pictures/wallpapers/wave-wallpaper_light.png
 	color = rgba(255, 0, 0, 1.0)
 	blur_passes = 0
 }
