--- a/beige_mono/.config/foot/foot.ini
+++ b/beige_mono/.config/foot/foot.ini
@@ -85,30 +85,34 @@ hide-when-typing=yes
 
 [colors]
 alpha=0.95
+## light mode
 background=f5ebe1
 foreground=000000
+## dark mode
+# background=252525
+# foreground=dcd3ca
 # flash=7f7f00
 # flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
-# regular0=242424  # black
-# regular1=f62b5a  # red
-# regular2=47b413  # green
-# regular3=e3c401  # yellow
-# regular4=24acd4  # blue
-# regular5=f2affd  # magenta
-# regular6=13c299  # cyan
-# regular7=e6e6e6  # white
+regular0=242424  # black
+regular1=f62b5a  # red
+regular2=3bb85c  # green
+regular3=e3c907  # yellow
+regular4=24acd4  # blue
+regular5=9645a1  # magenta
+regular6=3ea57b  # cyan
+regular7=c0c0c0 # white
 
 ## Bright colors (color palette 8-15)
-# bright0=616161   # bright black
-# bright1=ff4d51   # bright red
-# bright2=35d450   # bright green
-# bright3=e9e836   # bright yellow
-# bright4=5dc5f8   # bright blue
-# bright5=feabf2   # bright magenta
-# bright6=24dfc4   # bright cyan
-# bright7=ffffff   # bright white
+bright0=616161   # bright black
+bright1=ff4d51   # bright red
+bright2=3bb85c   # bright green
+bright3=e3c907   # bright yellow
+bright4=5dc5f8   # bright blue
+bright5=9645a1   # bright magenta
+bright6=3ea57b   # bright cyan
+bright7=c0c0c0   # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
