--- a/beige_mono/.config/hypr/conf/bindings.conf
+++ b/beige_mono/.config/hypr/conf/bindings.conf
@@ -2,16 +2,16 @@ $mainMod = SUPER
 
 $terminal = foot
 $browser = zen-browser
-$filemanager = nautilus
+$filemanager = thunar
 $appmenu = ~/.config/wofi/toggle.sh
 $todo = ~/.config/c3/toggle.sh
-$screenshot = grim -g "$(slurp  -w 0 -b 00000066)" - | wl-copy
+$screenshot = ~/.config/hypr/scripts/screenshotlist.sh
 
 # bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $filemanager
-bind = $mainMod, R, exec, $appmenu
+bind = $mainMod, S, exec, $appmenu
 bind = $mainMod, D, exec, vesktop
 bind = $mainMod, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = $mainMod, Q, killactive,
@@ -72,14 +72,21 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+# bindel = ,XF86MonBrightnessUp, exec, hyprctl hyprsunset gamma +10
+# bindel = ,XF86MonBrightnessDown, exec, hyprctl hyprsunset gamma -10
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = $mainMod ,XF86MonBrightnessUp, exec, hyprctl hyprsunset temperature 6000
+bindel = $mainMod ,XF86MonBrightnessDown, exec, hyprctl hyprsunset temperature 5000
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# Power buttons
+bindl = , xF86Sleep, exec, wlogout
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
