added screenshot and clipboard buttons to waybar

--- a/beige_mono/.config/hypr/conf/bindings.conf
+++ b/beige_mono/.config/hypr/conf/bindings.conf
@@ -6,6 +6,7 @@ $filemanager = thunar
 $appmenu = ~/.config/wofi/toggle.sh
 $todo = ~/.config/c3/toggle.sh
 $screenshot = ~/.config/hypr/scripts/screenshotlist.sh
+$clipboard = ~/.config/hypr/scripts/clipboard.sh
 
 # bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
 bind = $mainMod, Return, exec, $terminal
@@ -13,7 +14,7 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $filemanager
 bind = $mainMod, S, exec, $appmenu
 bind = $mainMod, D, exec, vesktop
-bind = $mainMod, C, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind = $mainMod, C, exec, $clipboard
 bind = $mainMod, Q, killactive,
 bind = $mainMod, T, togglefloating,
 bind = $mainMod, F, fullscreen,
