--- a/beige_mono/.config/waybar/config.jsonc
+++ b/beige_mono/.config/waybar/config.jsonc
@@ -23,7 +23,9 @@
       "wlr/taskbar"
     ],
     "modules-center": [
-      "clock"
+      "custom/clipboard",
+      "clock",
+      "custom/screenshot"
     ],
     "modules-right": [
       "wireplumber",
