--- a/beige_mono/.config/foot/foot.ini
+++ b/beige_mono/.config/foot/foot.ini
@@ -95,24 +95,24 @@ foreground=000000
 # flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
-regular0=242424  # black
-regular1=f62b5a  # red
-regular2=3bb85c  # green
-regular3=e3c907  # yellow
-regular4=24acd4  # blue
-regular5=9645a1  # magenta
-regular6=3ea57b  # cyan
-regular7=c0c0c0 # white
+regular0=404040  # black
+regular1=ca6f80  # red
+regular2=3ca57a  # green
+regular3=ba8236  # yellow
+regular4=417fbc  # blue
+regular5=7f6cb8  # magenta
+regular6=009fba  # cyan
+regular7=a09c98  # white
 
 ## Bright colors (color palette 8-15)
-bright0=616161   # bright black
-bright1=ff4d51   # bright red
-bright2=3bb85c   # bright green
-bright3=e3c907   # bright yellow
-bright4=5dc5f8   # bright blue
-bright5=9645a1   # bright magenta
-bright6=3ea57b   # bright cyan
-bright7=c0c0c0   # bright white
+bright0=606060   # bright black
+bright1=d38f97   # bright red
+bright2=81a98e   # bright green
+bright3=bd8b63   # bright yellow
+bright4=8192c2   # bright blue
+bright5=8b7fad   # bright magenta
+bright6=5f9eaf   # bright cyan
+bright7=bcb7b1   # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
