--- a/beige_mono/.config/hypr/conf/rules.conf
+++ b/beige_mono/.config/hypr/conf/rules.conf
@@ -1,9 +1,8 @@
+layerrule = noanim, swww-daemon
 layerrule = animation fade, selection
 layerrule = animation fade, hyprpicker
 layerrule = animation fade, logout_dialog
 layerrule = animation slide, wofi
-
-windowrulev2 = tile, class:^(Minecraft)
 
 windowrulev2 = pseudo, class:com.github.th_ch.youtube_music
 windowrulev2 = size 500 800, class:com.github.th_ch.youtube_music
@@ -13,12 +12,17 @@ windowrulev2 = size 600 800, title:todo
 windowrulev2 = move 660 65, title:todo
 windowrulev2 = pin, title:todo
 
-windowrulev2 = float, class:foot, title:nmtui
-windowrulev2 = center, class:foot, title:nmtui
-windowrulev2 = pin, class:foot, title:nmtui
-windowrulev2 = size 800 500, class:foot, title:nmtui
+windowrulev2 = float, title:updates
+windowrulev2 = size 900 900, title:updates
+windowrulev2 = move 1005 66, title:updates
+windowrulev2 = pin, title:updates
 
-windowrulev2 = float, class:foot, title:screensaver
-windowrulev2 = size 1000 900, class:foot, title:screensaver
-windowrulev2 = fullscreen, class:foot, title:screensaver
-windowrulev2 = animation popin 100%, class:foot, title:screensaver
+# jetbrains
+# fix tooltips (always have a title of `win.<id>`)
+windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
+windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^(win.*)$
+# fix tab dragging (always have a single space character as their title)
+windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
+windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
+
+windowrulev2 = minsize 450 150, initialClass:zen
