--- a/beige_mono/.config/hypr/hyprlock.conf
+++ b/beige_mono/.config/hypr/hyprlock.conf
@@ -5,7 +5,7 @@ general {
 
 background {
 	monitor =
-	path = ~/Pictures/wallpapers/wave-wallpaper_light.png
+	path = ~/.config/hypr/lockscreen_wallpaper.png # path to your lockscreen wallpaper
 	color = rgba(255, 0, 0, 1.0)
 	blur_passes = 0
 }
@@ -75,7 +75,7 @@ shape {
 
 image {
 	monitor =
-	path = ~/.config/hypr/user-image.png
+	path = ~/.config/hypr/user-image.png # path to your user image
 	size = 200
 	rounding = -1
 	border_size = 0
