--- a/beige_mono/.config/hypr/conf/animations.conf
+++ b/beige_mono/.config/hypr/conf/animations.conf
@@ -1,6 +1,6 @@
 animations {
 	enabled = true
-	first_launch_animation = true
+	first_launch_animation = false
 
 	# Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 	bezier = easeIn, 0.22, 0.63, 0.1, 1
@@ -12,7 +12,7 @@ animations {
 	animation = windowsIn, 1, 3, easeIn, popin 70%
 	animation = windowsOut, 1, 1, easeIn, popin 70%
 	animation = windowsMove, 1, 2, easeIn, slide
-	animation = layers, 1, 5, easeIn, popin
+	animation = layers, 1, 5, easeIn, slide
 	animation = fade, 1, 5, easeIn
 	animation = fadeIn, 1, 5, easeIn
 	animation = fadeOut, 1, 5, easeIn
