--- a/beige_mono/.config/hypr/conf/bindings.conf
+++ b/beige_mono/.config/hypr/conf/bindings.conf
@@ -1,34 +1,54 @@
 $mainMod = SUPER
 
-$terminal = foot
+$minecraft = prime-run prismlauncher
 $browser = zen-browser
 $filemanager = thunar
-$appmenu = ~/.config/wofi/toggle.sh
-$todo = ~/.config/c3/toggle.sh
+$discord = vesktop
+$terminal = foot
+$appmenu = ~/.config/hypr/scripts/appmenu_toggle.sh
+$clipboard = ~/.config/hypr/scripts/clipboard_toggle.sh
+$logout = ~/.config/hypr/scripts/logout_toggle.sh
+$network = ~/.config/hypr/scripts/wifilist_toggle.sh
 $screenshot = ~/.config/hypr/scripts/screenshotlist.sh
-$clipboard = ~/.config/hypr/scripts/clipboard.sh
+$todo = ~/.config/hypr/scripts/todo_toggle.sh
+$updates = ~/.config/hypr/scripts/updates_toggle.sh
 
-# bind = SUPER, Super_L, exec, ~/.config/eww/menu/toggle_menu
+# Quick Launchers
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, D, exec, $discord
 bind = $mainMod, E, exec, $filemanager
-bind = $mainMod, S, exec, $appmenu
-bind = $mainMod, D, exec, vesktop
+bind = $mainMod, M, exec, $minecraft
+
+# General
 bind = $mainMod, C, exec, $clipboard
+bind = $mainMod, N, exec, $network
+bind = $mainMod, S, exec, $appmenu
+bind = $mainMod, X, exec, $todo
+bind = , print, exec, $screenshot
+
+# System
+bind = $mainMod SHIFT, Q, exec, $logout
+bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, U, exec, $updates
+
+##################
+# Window Control #
+##################
+
+# Misc
+bind = $mainMod, F, fullscreen,
+bind = $mainMod, J, togglesplit,
+bind = $mainMod, K, swapsplit,
+bind = $mainMod, P, pseudo,
 bind = $mainMod, Q, killactive,
 bind = $mainMod, T, togglefloating,
-bind = $mainMod, F, fullscreen,
+
+# Resize windows with mainMod + Shift + arrow keys
 bind = $mainMod SHIFT, left, resizeactive, -100 0
 bind = $mainMod SHIFT, right, resizeactive, 100 0
 bind = $mainMod SHIFT, up, resizeactive, 0 -100
 bind = $mainMod SHIFT, down, resizeactive, 0 100
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, K, swapsplit, # dwindle
-bind = $mainMod SHIFT, Q, exec, wlogout
-bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, X, exec, $todo
-bind = , print, exec, $screenshot
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -86,8 +106,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Power buttons
-bindl = , xF86Sleep, exec, wlogout
+# Power buttons (not working because hardwired ?)
+# bindl = , xF86Sleep, exec, wlogout
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
@@ -98,8 +118,7 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 
 
 # Custom workspaces
-
-# Minimized windows workspace ($mainMod + S to toggle and $mainMod + D to move windows in and out)
+# Minimized windows workspace ($mainMod + Tab to toggle and $mainMod + Shift + Tab to move windows in and out)
 workspace = special:minimized, gapsin:60, gapsout:70, bordersize:0
 bind = $mainMod, Tab, togglespecialworkspace, minimized
 bind = $mainMod SHIFT, Tab, movetoworkspacesilent, special:minimized
