--- a/beige_mono/.config/hypr/conf/exec.conf
+++ b/beige_mono/.config/hypr/conf/exec.conf
@@ -1,12 +1,11 @@
+exec-once = swww-daemon
+exec-once = swww img ~/Pictures/wallpapers/wave-wallpaper_light.png --transition-type fade --transition-duration 1.5
 exec-once = udiskie
 exec-once = hypridle
-exec-once = swww-daemon
 exec-once = hyprsunset
-exec-once = swww img ~/Pictures/wallpapers/wave-wallpaper_light.png --transition-type center
 exec-once = waybar -c ~/.config/waybar/config.jsonc -s ~/.config/waybar/style_light.css
 exec-once = exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = eww daemon
 exec-once = ~/.config/hypr/scripts/battery_notifier.sh
