--- a/beige_mono/.config/hypr/conf/input.conf
+++ b/beige_mono/.config/hypr/conf/input.conf
@@ -21,7 +21,7 @@ input {
 	natural_scroll = false
 	follow_mouse = 1
 	focus_on_close = 0
-	mouse_refocus = true
+	mouse_refocus = false
 	float_switch_override_focus = 1
 	special_fallthrough = false
 	off_window_axis_events = 1
