--- a/beige_mono/.config/hypr/conf/misc.conf
+++ b/beige_mono/.config/hypr/conf/misc.conf
@@ -12,4 +12,26 @@ misc {
 	always_follow_on_dnd = true
 	layers_hog_keyboard_focus = true
 	animate_manual_resizes = false
+  animate_mouse_windowdragging = false
+  disable_autoreload = false
+  enable_swallow = false
+  swallow_regex =
+  swallow_exception_regex =
+  focus_on_activate = true
+  mouse_move_focuses_monitor = true
+  render_ahead_of_time = false
+  render_ahead_safezone = 1
+  allow_session_lock_restore = false
+  background_color = 0x000000
+  close_special_on_empty = true
+  new_window_takes_over_fullscreen = 2
+  exit_window_retains_fullscreen = false
+  initial_workspace_tracking = 1
+  middle_click_paste = true
+  render_unfocused_fps = 15
+  disable_xdg_env_checks = false
+  disable_hyprland_qtutils_check = false
+  lockdead_screen_delay = 1000
+  enable_anr_dialog = true
+  anr_missed_pings = 1
 }
