moved wallpaper to config path

--- a/beige_mono/.config/hypr/conf/exec.conf
+++ b/beige_mono/.config/hypr/conf/exec.conf
@@ -1,5 +1,5 @@
 exec-once = swww-daemon
-exec-once = swww img ~/Pictures/wallpapers/wave-wallpaper_light.png --transition-type fade --transition-duration 1.5
+exec-once = swww img ~/.config/hypr/wallpaper.png --transition-type fade --transition-duration 1.5
 exec-once = udiskie
 exec-once = hypridle
 exec-once = hyprsunset
