--- a/beige_mono/.config/hypr/conf/bindings.conf
+++ b/beige_mono/.config/hypr/conf/bindings.conf
@@ -1,10 +1,10 @@
 $mainMod = SUPER
 
-$minecraft = prime-run prismlauncher
-$browser = zen-browser
+$code = visual-studio-code-bin
+$browser = firefox
 $filemanager = thunar
-$discord = vesktop
-$terminal = foot
+$discord = discord
+$terminal = kitty
 $appmenu = ~/.config/hypr/scripts/appmenu_toggle.sh
 $clipboard = ~/.config/hypr/scripts/clipboard_toggle.sh
 $logout = ~/.config/hypr/scripts/logout_toggle.sh
@@ -18,10 +18,10 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, D, exec, $discord
 bind = $mainMod, E, exec, $filemanager
-bind = $mainMod, M, exec, $minecraft
+bind = $mainMod, V, exec, $code
 
 # General
-bind = $mainMod, C, exec, $clipboard
+bind = $mainMod, Y, exec, $clipboard
 bind = $mainMod, N, exec, $network
 bind = $mainMod, S, exec, $appmenu
 bind = $mainMod, X, exec, $todo
