adjusts in hyprland, waybar && added bluetooth icon

--- a/beige_mono/.config/hypr/conf/bindings.conf
+++ b/beige_mono/.config/hypr/conf/bindings.conf
@@ -5,12 +5,12 @@ $browser = firefox
 $filemanager = nautilus
 $discord = discord
 $terminal = kitty
+$obsidian = obsidian
 $appmenu = ~/.config/hypr/scripts/appmenu_toggle.sh
 $clipboard = ~/.config/hypr/scripts/clipboard_toggle.sh
 $logout = ~/.config/hypr/scripts/logout_toggle.sh
 $network = ~/.config/hypr/scripts/wifilist_toggle.sh
 $screenshot = ~/.config/hypr/scripts/screenshotlist.sh
-; $todo = ~/.config/hypr/scripts/todo_toggle.sh
 $updates = ~/.config/hypr/scripts/updates_toggle.sh
 
 # Quick Launchers
@@ -19,12 +19,12 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, D, exec, $discord
 bind = $mainMod, E, exec, $filemanager
 bind = $mainMod, C, exec, $code
+bind = $mainMod, O, exec, $obsidian
 
 # General
 bind = $mainMod, Y, exec, $clipboard
 bind = $mainMod, N, exec, $network
 bind = $mainMod, S, exec, $appmenu
-; bind = $mainMod, X, exec, $todo
 bind = , print, exec, $screenshot
 
 # System
