--- a/beige_mono/.config/hypr/conf/input.conf
+++ b/beige_mono/.config/hypr/conf/input.conf
@@ -1,6 +1,6 @@
 input {
 	kb_model =
-	kb_layout = pt
+	kb_layout = br
 	kb_variant = abnt2
 	kb_options =
 	kb_rules =
@@ -10,10 +10,10 @@ input {
 	repeat_rate = 25
 	repeat_delay = 600
 	sensitivity = 0.0
-	accel_profile = 
+	accel_profile =
 	force_no_accel = false
 	left_handed = false
-	scroll_points = 
+	scroll_points =
 	scroll_method = 2fg
 	scroll_button = 0
 	scroll_button_lock = 0
@@ -28,7 +28,7 @@ input {
 	emulate_discrete_scroll = 1
 
 	touchpad {
-		disable_while_typing = false
+		disable_while_typing = true
 		natural_scroll = true
 		scroll_factor = 1.0
 		middle_button_emulation = false
