--- a/beige_mono/.config/hypr/hyprlock.conf
+++ b/beige_mono/.config/hypr/hyprlock.conf
@@ -5,7 +5,7 @@ general {
 
 background {
 	monitor =
-	path = ~/.config/hypr/wallpaper.png # path to your lockscreen wallpaper
+	path = ~/.config/hypr/lockscreen_wallpaper.png # path to your lockscreen wallpaper
 	color = rgba(255, 0, 0, 1.0)
 	blur_passes = 0
 }
