--- a/beige_mono/.config/hypr/conf/misc.conf
+++ b/beige_mono/.config/hypr/conf/misc.conf
@@ -27,7 +27,7 @@ misc {
   new_window_takes_over_fullscreen = 2
   exit_window_retains_fullscreen = false
   initial_workspace_tracking = 1
-  middle_click_paste = true
+  middle_click_paste = false
   render_unfocused_fps = 15
   disable_xdg_env_checks = false
   disable_hyprland_qtutils_check = false
