--- a/beige_mono/.config/hypr/conf/monitors.conf
+++ b/beige_mono/.config/hypr/conf/monitors.conf
@@ -1,3 +1,4 @@
-monitor = eDP-1, 1920x1080@60, 0x0, 1
-#monitor = , preferred, auto, 1 #Rule to add a monitor
-monitor = , preferred, auto, 1, mirror, eDP-1 #Rule to mirror screen with HDMI
+monitor = eDP-1, 1920x1080@165, 0x0, 1
+
+#monitor = eDP-1, 1920x1080@165.00, 0x0,  1 #Rule to add a monitor
+#monitor = HDMI-A-1, 2560x1440@144.00, auto-left, 1
