--- a/beige_mono/.config/hypr/hypridle.conf
+++ b/beige_mono/.config/hypr/hypridle.conf
@@ -11,7 +11,7 @@ listener {
 }
 
 # turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
-listener { 
+listener {
     timeout = 10                                          # 2.5min.
     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
     on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
@@ -28,7 +28,7 @@ listener {
     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
 
-listener {
-    timeout = 1800                                # 30min
-    on-timeout = systemctl suspend                # suspend pc
-}
+#listener {
+#    timeout = 1800                                # 30min
+#    on-timeout = systemctl suspend                # suspend pc
+#}
